vendor/structopt-0.3.21/tests/ui/bool_required.stderr
error: required is meaningless for bool
  --> $DIR/bool_required.rs:14:24
   |
14 |     #[structopt(short, required = true)]
   |                        ^^^^^^^^
